2007-02-02  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Make requirement of gconf optional, since we want pitivi to also
	work on pure gtk+ installations.

2007-01-31  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle

=== release 0.10.2 ===

2007-01-31  Edward Hervey  <edward@fluendo.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.10.2

2007-01-28  Edward Hervey  <edward@fluendo.com>

	* AUTHORS: (Contributors): 
	Updated contributor list

2007-01-26  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.1.3 pre-release

2007-01-26  Edward Hervey  <edward@fluendo.com>

	* configure.ac: (PYGST_REQ): 
	Bring gst-python requirement down to 0.10.6. 0.10.7 is not a hard
	requirement, but highly recommended since it fixes big thread-safety
	issues.

2007-01-25  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.1.2 pre-release

2007-01-25  Edward Hervey  <edward@fluendo.com>

	* po/ar.po:
	* po/ca.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/pa.po:
	* po/pt_BR.po:
	* po/sv.po:
	* po/zh_CN.po:
	Update po files for pre-release

2007-01-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/timeline.py:
	More code refactoring in timeline objects.

2007-01-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/effects.py:
	cough, sven is stupid, cough

2007-01-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	* pitivi/effects.py:
	Move the magician back to the top-level.
	* pitivi/timeline/Makefile.am:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/effects.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	* pitivi/timeline/timeline.py:
	Split the timeline objects into smaller files for easier comprehension.
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py: